argocd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd
  # annotations:
  # traefik.ingress.kubernetes.io/router.middlewares: argocd-argocd-stripprefix@kubernetescrd
spec:
  rules:
    - http:
        paths:
          - path: /argocd
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  name: http
  tls:
    - secretName: argocd-secret
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: argocd-stripprefix
spec:
  stripPrefix:
    prefixes:
      - /argocd/
